# iced_gif

./: .gitignore  Cargo.toml  LICENSE  README.md
example/: Cargo.toml
example/src/: main.rs
src/: lib.rs  widget.rs
src/widget/: gif.rs
