[package]
name = "iced_gif"
version = "0.1.0"
edition = "2021"
authors = ["tarkah <admin@tarkah.dev>"]
description = "A GIF widget for Iced"
license = "MIT"
repository = "https://github.com/tarkah/iced_gif"

[workspace]
default-members = [
  "./example"
]
members = [
  ".",
  "./example",
]

[features]
default = []
tokio = ["dep:tokio", "dep:tokio-util", "iced_futures/tokio"]

[dependencies]
iced_native = "0.8"
thiserror = "1.0"

[dependencies.iced_futures]
version = "0.5"

[dependencies.tokio]
version = "1"
optional = true
features = ["fs"]

[dependencies.tokio-util]
version = "0.7"
optional = true
features = ["io", "io-util"]

[dependencies.image_rs]
package = "image"
version = "0.24"
features = ["gif"]
