[package]
name = "iced_gif"
version = "0.1.1"
edition = "2021"
authors = ["tarkah <admin@tarkah.dev>"]
description = "A GIF widget for Iced"
license = "MIT"
repository = "https://github.com/tarkah/iced_gif"

[workspace]
default-members = [
  "./example"
]
members = [
  ".",
  "./example",
]

[features]
default = ["async-fs"]
tokio = ["dep:tokio"]

[dependencies]
iced_native = "0.9"
iced_futures = "0.6"
thiserror = "1.0"

[dependencies.async-fs]
version = "1.6"
optional = true

[dependencies.tokio]
version = "1"
optional = true
features = ["fs", "io-util"]

[dependencies.image_rs]
package = "image"
version = "0.24"
features = ["gif"]
